# branchless-matching-engine

./: .gitignore  CMakeLists.txt  README.md
benchmarks/: benchmark_branching_vs_branchless.cpp
include/: matching_engine.hpp  order.hpp  timer.hpp
src/: main.cpp  matching_engine.cpp
tests/: test_matching_engine.cpp
